CustomObjects/objects/blng__PaymentScheduler__c.object
<CustomObject>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__PaymentBatch__c</fullName>
        <label>Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Startdateandtime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</description>
        <inlineHelpText>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</inlineHelpText>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TargetDayOfMonth__c</fullName>
        <label>Target Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PreferredBillingDay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetDayofWeek__c</fullName>
        <label>Target Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <description>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</description>
        <inlineHelpText>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__SchedulerType</valueSetName>
        </valueSet>
    </fields>
    <label>Payment Scheduler</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__TargetDate__c</columns>
        <columns>blng__ApexJobId__c</columns>
        <columns>blng__PaymentBatch__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Schedulers</label>
    </listViews>
    <listViews>
        <fullName>blng__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>